Bug 189308. Fire onscroll for all kinds of scrollling, and consolidate multiple scrolls into one event, and delay firing the event until we've returned to our PLevent loop. r+sr=dbaron